project("compute")

set(CMAKE_CXX_STANDARD 11)

file(GLOB_RECURSE ${PROJECT_NAME}_HEADERS ${PROJECT_SOURCE_DIR}/*.h)
file(GLOB_RECURSE ${PROJECT_NAME}_SOURCES ${PROJECT_SOURCE_DIR}/*.cpp)

file(GLOB_RECURSE ${PROJECT_NAME}_COMMON_HEADERS ${PROJECT_SOURCE_DIR}/../common/*.h)
file(GLOB_RECURSE ${PROJECT_NAME}_COMMON_SOURCES ${PROJECT_SOURCE_DIR}/../common/*.cpp)

add_executable(
  ${PROJECT_NAME}
  ${${PROJECT_NAME}_SOURCES} ${${PROJECT_NAME}_HEADERS}
  ${${PROJECT_NAME}_COMMON_HEADERS} ${${PROJECT_NAME}_COMMON_SOURCES})

target_link_libraries(${PROJECT_NAME} raytracing ${NANOGUI_EXTRA_LIBS} cxxopts)

if(MSVC)
  target_compile_options(${PROJECT_NAME} PRIVATE /GL)
elseif(CMAKE_CXX_COMPILER_ID MATCHES "Clang" OR CMAKE_CXX_COMPILER_ID MATCHES "GNU")
  target_compile_options(${PROJECT_NAME} PRIVATE -Wall -O3 -g)
endif()
